qt/gen_qwizard.h

class QAbstractButton;
class QMetaObject;
class QPixmap;
class QSize;
class QVariant;
class QWidget;
class QWizard;
class QWizardPage;
typedef struct QAbstractButton QAbstractButton;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QPixmap QPixmap;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
typedef struct QWizard QWizard;
typedef struct QWizardPage QWizardPage;
bool QWizardPage_override_virtual_timerEvent(void* self, intptr_t slot);
bool QWizardPage_override_virtual_childEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_childEvent(void* self, QChildEvent* event);
bool QWizardPage_override_virtual_customEvent(void* self, intptr_t slot);
void QWizardPage_virtualbase_customEvent(void* self, QEvent* event);
bool QWizardPage_override_virtual_connectNotify(void* self, intptr_t slot);
void QWizardPage_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QWizardPage_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QWizardPage_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QWizardPage_delete(QWizardPage* self);