qt/gen_qwizard.nim

proc fcQWizardPage_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_timerEvent".}
proc fQWizardPage_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_childEvent".}
proc fcQWizardPage_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_childEvent".}
proc fQWizardPage_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QWizardPage_virtualbase_customEvent".}
proc fcQWizardPage_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_customEvent".}
proc fQWizardPage_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QWizardPage_virtualbase_connectNotify".}
proc fcQWizardPage_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_connectNotify".}
proc fQWizardPage_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QWizardPage_virtualbase_disconnectNotify".}
proc fcQWizardPage_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_disconnectNotify".}
proc fcQWizardPage_delete(self: pointer) {.importc: "QWizardPage_delete".}


func init*(T: type QWizard, h: ptr cQWizard): QWizard =
  T(h: h)
proc create*(T: type QWizard, parent: gen_qwidget.QWidget): QWizard =

  QWizard.init(fcQWizard_new(parent.h))
proc create*(T: type QWizard, ): QWizard =

  QWizard.init(fcQWizard_new2())
proc create*(T: type QWizard, parent: gen_qwidget.QWidget, flags: gen_qnamespace.WindowType): QWizard =

  QWizard.init(fcQWizard_new3(parent.h, cint(flags)))
proc metaObject*(self: QWizard, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQWizard_metaObject(self.h))

proc metacast*(self: QWizard, param1: cstring): pointer =

  fcQWizard_metacast(self.h, param1)

proc metacall*(self: QWizard, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQWizard_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QWizard, s: cstring): string =

  let v_ms = fcQWizard_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QWizard, s: cstring): string =

  let v_ms = fcQWizard_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addPage*(self: QWizard, page: QWizardPage): cint =

  fcQWizard_addPage(self.h, page.h)

proc setPage*(self: QWizard, id: cint, page: QWizardPage): void =

  fcQWizard_setPage(self.h, id, page.h)

proc removePage*(self: QWizard, id: cint): void =

  fcQWizard_removePage(self.h, id)

proc page*(self: QWizard, id: cint): QWizardPage =

  QWizardPage(h: fcQWizard_page(self.h, id))

proc hasVisitedPage*(self: QWizard, id: cint): bool =

  fcQWizard_hasVisitedPage(self.h, id)

proc visitedPages*(self: QWizard, ): seq[cint] =

  var v_ma = fcQWizard_visitedPages(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc visitedIds*(self: QWizard, ): seq[cint] =

  var v_ma = fcQWizard_visitedIds(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc pageIds*(self: QWizard, ): seq[cint] =

  var v_ma = fcQWizard_pageIds(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc setStartId*(self: QWizard, id: cint): void =

  fcQWizard_setStartId(self.h, id)

proc startId*(self: QWizard, ): cint =

  fcQWizard_startId(self.h)

proc currentPage*(self: QWizard, ): QWizardPage =

  QWizardPage(h: fcQWizard_currentPage(self.h))

proc currentId*(self: QWizard, ): cint =

  fcQWizard_currentId(self.h)

proc validateCurrentPage*(self: QWizard, ): bool =

  fcQWizard_validateCurrentPage(self.h)

proc nextId*(self: QWizard, ): cint =

  fcQWizard_nextId(self.h)

proc setField*(self: QWizard, name: string, value: gen_qvariant.QVariant): void =

  fcQWizard_setField(self.h, struct_miqt_string(data: name, len: csize_t(len(name))), value.h)

proc field*(self: QWizard, name: string): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQWizard_field(self.h, struct_miqt_string(data: name, len: csize_t(len(name)))))

proc setWizardStyle*(self: QWizard, style: QWizardWizardStyle): void =

  fcQWizard_setWizardStyle(self.h, cint(style))

proc wizardStyle*(self: QWizard, ): QWizardWizardStyle =

  QWizardWizardStyle(fcQWizard_wizardStyle(self.h))

proc setOption*(self: QWizard, option: QWizardWizardOption): void =

  fcQWizard_setOption(self.h, cint(option))

proc testOption*(self: QWizard, option: QWizardWizardOption): bool =

  fcQWizard_testOption(self.h, cint(option))

proc setOptions*(self: QWizard, options: QWizardWizardOption): void =

  fcQWizard_setOptions(self.h, cint(options))

proc options*(self: QWizard, ): QWizardWizardOption =

  QWizardWizardOption(fcQWizard_options(self.h))

proc setButtonText*(self: QWizard, which: QWizardWizardButton, text: string): void =

  fcQWizard_setButtonText(self.h, cint(which), struct_miqt_string(data: text, len: csize_t(len(text))))

proc buttonText*(self: QWizard, which: QWizardWizardButton): string =

  let v_ms = fcQWizard_buttonText(self.h, cint(which))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setButtonLayout*(self: QWizard, layout: seq[QWizardWizardButton]): void =

  var layout_CArray = newSeq[cint](len(layout))
  for i in 0..<len(layout):
    layout_CArray[i] = cint(layout[i])

  fcQWizard_setButtonLayout(self.h, struct_miqt_array(len: csize_t(len(layout)), data: if len(layout) == 0: nil else: addr(layout_CArray[0])))

proc setButton*(self: QWizard, which: QWizardWizardButton, button: gen_qabstractbutton.QAbstractButton): void =

  fcQWizard_setButton(self.h, cint(which), button.h)

proc button*(self: QWizard, which: QWizardWizardButton): gen_qabstractbutton.QAbstractButton =

  gen_qabstractbutton.QAbstractButton(h: fcQWizard_button(self.h, cint(which)))

proc setTitleFormat*(self: QWizard, format: gen_qnamespace.TextFormat): void =

  fcQWizard_setTitleFormat(self.h, cint(format))

proc titleFormat*(self: QWizard, ): gen_qnamespace.TextFormat =

  gen_qnamespace.TextFormat(fcQWizard_titleFormat(self.h))

proc setSubTitleFormat*(self: QWizard, format: gen_qnamespace.TextFormat): void =

  fcQWizard_setSubTitleFormat(self.h, cint(format))

proc subTitleFormat*(self: QWizard, ): gen_qnamespace.TextFormat =

  gen_qnamespace.TextFormat(fcQWizard_subTitleFormat(self.h))

proc setPixmap*(self: QWizard, which: QWizardWizardPixmap, pixmap: gen_qpixmap.QPixmap): void =

  fcQWizard_setPixmap(self.h, cint(which), pixmap.h)

proc pixmap*(self: QWizard, which: QWizardWizardPixmap): gen_qpixmap.QPixmap =

  gen_qpixmap.QPixmap(h: fcQWizard_pixmap(self.h, cint(which)))

proc setSideWidget*(self: QWizard, widget: gen_qwidget.QWidget): void =

  fcQWizard_setSideWidget(self.h, widget.h)

proc sideWidget*(self: QWizard, ): gen_qwidget.QWidget =

  gen_qwidget.QWidget(h: fcQWizard_sideWidget(self.h))

proc setDefaultProperty*(self: QWizard, className: cstring, property: cstring, changedSignal: cstring): void =

  fcQWizard_setDefaultProperty(self.h, className, property, changedSignal)

proc setVisible*(self: QWizard, visible: bool): void =

  fcQWizard_setVisible(self.h, visible)

proc sizeHint*(self: QWizard, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQWizard_sizeHint(self.h))

proc currentIdChanged*(self: QWizard, id: cint): void =

  fcQWizard_currentIdChanged(self.h, id)

proc miqt_exec_callback_QWizard_currentIdChanged(slot: int, id: cint) {.exportc.} =
  type Cb = proc(id: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = id


  nimfunc[](slotval1)

proc oncurrentIdChanged*(self: QWizard, slot: proc(id: cint)) =
  type Cb = proc(id: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQWizard_connect_currentIdChanged(self.h, cast[int](addr tmp[]))
proc helpRequested*(self: QWizard, ): void =

  fcQWizard_helpRequested(self.h)

proc miqt_exec_callback_QWizard_helpRequested(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onhelpRequested*(self: QWizard, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQWizard_connect_helpRequested(self.h, cast[int](addr tmp[]))
proc customButtonClicked*(self: QWizard, which: cint): void =

  fcQWizard_customButtonClicked(self.h, which)

proc miqt_exec_callback_QWizard_customButtonClicked(slot: int, which: cint) {.exportc.} =
  type Cb = proc(which: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = which


  nimfunc[](slotval1)

proc oncustomButtonClicked*(self: QWizard, slot: proc(which: cint)) =
  type Cb = proc(which: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQWizard_connect_customButtonClicked(self.h, cast[int](addr tmp[]))
proc pageAdded*(self: QWizard, id: cint): void =

  fcQWizard_pageAdded(self.h, id)

proc miqt_exec_callback_QWizard_pageAdded(slot: int, id: cint) {.exportc.} =
  type Cb = proc(id: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = id


  nimfunc[](slotval1)

proc onpageAdded*(self: QWizard, slot: proc(id: cint)) =
  type Cb = proc(id: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQWizard_connect_pageAdded(self.h, cast[int](addr tmp[]))
proc pageRemoved*(self: QWizard, id: cint): void =

  fcQWizard_pageRemoved(self.h, id)

proc miqt_exec_callback_QWizard_pageRemoved(slot: int, id: cint) {.exportc.} =
  type Cb = proc(id: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = id


  nimfunc[](slotval1)

proc onpageRemoved*(self: QWizard, slot: proc(id: cint)) =
  type Cb = proc(id: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQWizard_connect_pageRemoved(self.h, cast[int](addr tmp[]))
proc back*(self: QWizard, ): void =

  fcQWizard_back(self.h)

proc next*(self: QWizard, ): void =

  fcQWizard_next(self.h)

proc restart*(self: QWizard, ): void =

  fcQWizard_restart(self.h)

proc tr2*(_: type QWizard, s: cstring, c: cstring): string =

  let v_ms = fcQWizard_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QWizard, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQWizard_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QWizard, s: cstring, c: cstring): string =

  let v_ms = fcQWizard_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QWizard, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQWizard_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setOption2*(self: QWizard, option: QWizardWizardOption, on: bool): void =

  fcQWizard_setOption2(self.h, cint(option), on)

proc callVirtualBase_metacall(self: QWizard, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQWizard_virtualbase_metacall(self.h, cint(param1), param2, param3)
